[package]
name = "python-syntax"
version = "0.1.0"
authors = ["Dominik Miedziński <dominik@mdzn.pl>"]
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.17.1"
lazy_static = "1.3.0"
num-bigint = "0.2.2"
regex = "1.1.9"
unicode_names2 = "0.2.2"

[build-dependencies]
lalrpop = "0.17.1"
