[package]
name = "python-syntax"
version = "0.1.0"
authors = ["Dominik Miedziński <dominik@mdzn.pl>"]
repository = "https://github.com/miedzinski/python-syntax"
description = "Python 3 parser"
license = "MIT"
edition = "2018"
build = "build.rs"

[dependencies]
lalrpop-util = "0.19"
lazy_static = "1.4.0"
num-bigint = "0.3"
regex = "1"
unicode_names2 = "0.4"

[build-dependencies]
lalrpop = "0.19"
